# notion-sync-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  GITHUB_SETUP.md  LICENSE  README.md  claude-progress.txt  pyproject.toml
.github/workflows/: publish.yml
docs/: api-reference.md  development.md  inbox.md  pitfalls.md  usage-guide.md
docs/features/: integration-test-suite.md
src/notion_sync/: __init__.py  blocks.py  builders.py  client.py  columns.py  diff.py  extract.py  fetch.py  modify.py  rich_text.py  utils.py
tests/: __init__.py  conftest.py  test_callout_icon_semantics.py  test_columns.py  test_content_hash_contract.py  test_content_hash_link.py  test_content_hash_mention.py  test_content_hash_style.py  test_live.py  test_live_advanced.py  test_live_basic.py  test_live_block_types.py  test_live_clone.py  test_live_columns.py  test_live_diff.py  test_live_zz_user_actions.py  test_live_zz_verify.py  test_nc_replace_guard.py  test_reorder_nc.py  test_rich_text_chunking.py  test_sanitization.py  test_utils.py  test_width_ratio.py
