[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-sync-lib"
version = "0.2.0"
description = "Rate-limited Notion API client with smart diff-based sync"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mark Vletter" }
]
keywords = [
    "notion",
    "api",
    "sync",
    "diff",
    "rate-limiting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "notion-client>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mvletter/notion-sync-lib"
Documentation = "https://github.com/mvletter/notion-sync-lib#readme"
Repository = "https://github.com/mvletter/notion-sync-lib"
Issues = "https://github.com/mvletter/notion-sync-lib/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/notion_sync"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
